crates/barista-cli/tests/snapshots/cmd_maven_vocab__compile_no_args.snap
---
source: crates/barista-cli/tests/cmd_maven_vocab.rs
assertion_line: 228
expression: redact_project_line(&out)
---
barista: `compile` is not yet executable.

project: <REDACTED>
phase:   compile
args:    (none)

The Maven-vocabulary lifecycle phases (clean / compile / test /
package / verify / install / deploy / site) are drop-in synonyms
for `mvn <phase>`. Execution wires through the barback daemon,
which lands in a subsequent milestone.

For now you can:
  - Run `mvn compile` in this project. Output
    will be identical until barista's barback path differs.
  - Run `barista pull --no-fetch` to inspect what barista would
    resolve before lifecycle execution.
  - Run `barista grind tree` to view the resolved dependency
    graph as recorded in `barista.lock`.
